# delphi

./: .gitattributes  .gitignore  README.md
python/: extract_keras_weights.py
python/minionn/: minionn_cifar10.py  minionn_model.py
python/minionn/pretrained/3_approx/: model  model_quant.h5  model_quant.npy  model_state
python/minionn/pretrained/5_approx/: model  model_quant.h5  model_quant.npy  model_state
python/minionn/pretrained/6_approx/: model  model_quant.h5  model_quant.npy  model_state
python/minionn/pretrained/7_approx/: model  model.npy  model_quant.h5  model_quant.npy  model_state
python/minionn/pretrained/relu/: model  model.npy  model_quant.h5  model_quant.npy  model_state
python/resnet/: resnet32_cifar100.py  resnet32_model.py
python/resnet/pretrained/relu/: model  model_state
rust/: Cargo.toml
rust/.cargo/: config
rust/algebra/: Cargo.toml
rust/algebra/benches/: field_benches.rs
rust/algebra/benches/near_mersenne_32/: mod.rs
rust/algebra/benches/near_mersenne_64/: mod.rs
rust/algebra/src/: bytes.rs  fixed_point.rs  lib.rs  polynomial.rs
rust/algebra/src/biginteger/: bigint_32.rs  bigint_64.rs  macros.rs  mod.rs  tests.rs
rust/algebra/src/fields/: macros.rs  mod.rs  tests.rs
rust/algebra/src/fields/models/: fp_256.rs  fp_32.rs  fp_32_lazy.rs  fp_384.rs  fp_64.rs  mod.rs
rust/algebra/src/fields/near_mersenne_64/: mod.rs  tests.rs
rust/bench-utils/: Cargo.toml
rust/bench-utils/src/: lib.rs
rust/crypto-primitives/: Cargo.toml
rust/crypto-primitives/benches/: beavers_mul.rs  garbling.rs
rust/crypto-primitives/src/: additive_share.rs  beavers_mul.rs  gc.rs  lib.rs
rust/experiments/: Cargo.toml  bandwidth_client.sh  latency_client.sh  latency_server.sh  memory_client.sh  memory_server.sh  validation.sh
rust/experiments/src/: lib.rs  linear_only.rs  minionn.rs  mnist.rs  resnet32.rs
rust/experiments/src/inference/: generate_test_images.py  inference.rs
rust/experiments/src/inference/minionn/: inference.rs
rust/experiments/src/latency/: client.rs  server.rs
rust/experiments/src/latency/cg/: client.rs  server.rs
rust/experiments/src/latency/gc/: client.rs  server.rs
rust/experiments/src/latency/minionn/: client.rs  server.rs
rust/experiments/src/latency/mnist/: client.rs  server.rs
rust/experiments/src/latency/resnet32/: client.rs  server.rs
rust/experiments/src/throughput/: client.rs  server.rs
rust/experiments/src/throughput/linear_only/: client.rs  server.rs
rust/experiments/src/throughput/linear_only/resnet32/: server.rs
rust/experiments/src/throughput/resnet32/: client.rs
rust/experiments/src/validation/: generate_test_images.py  validate.rs
rust/experiments/src/validation/minionn/: validate.rs
rust/neural-network/: Cargo.toml  README.md
rust/neural-network/benches/: average_pooling.rs  convolution.rs  fully_connected.rs  torch.rs
rust/neural-network/src/: lib.rs
rust/neural-network/src/layers/: mod.rs  non_linear.rs
rust/neural-network/src/layers/linear/: average_pooling.rs  convolution.rs  fully_connected.rs  mod.rs  tests.rs
rust/neural-network/src/tensors/: macros.rs  mod.rs
rust/protocols/: Cargo.toml  test_conv.py
rust/protocols-sys/: Cargo.toml  build.rs
rust/protocols-sys/c++/: CMakeLists.txt  README.md
rust/protocols-sys/c++/src/lib/: conv2d.cpp  conv2d.h  fc_layer.cpp  fc_layer.h  im2col.cpp  im2col.h  interface.cpp  interface.h  triples_gen.cpp  triples_gen.h
rust/protocols-sys/src/: client_cg.rs  client_gen.rs  client_linear.rs  client_triples.rs  key_share.rs  lib.rs  server_cg.rs  server_gen.rs  server_linear.rs  server_triples.rs
rust/protocols-sys/tests/: interface_test.rs
rust/protocols/src/: beavers_mul.rs  bytes.rs  gc.rs  lib.rs  linear_layer.rs  neural_network.rs  quad_approx.rs  tests.rs
